hawkbit: configure if to use token when getting file
Token can be used to authenticate against a Hawkbit server. However, the
SWU package could be stored someone else and an authorization token can
conflicts with other suthentication mechanisms. Add a flag to the
configuration file to disable the sending of the authentication header
when a SWU is downloaded.

Signed-off-by: Stefano Babic <sbabic@denx.de>

--- a/examples/configuration/swupdate.cfg
+++ b/examples/configuration/swupdate.cfg
@@ -122,6 +122,10 @@ identify : (
 #			  hawkBit target security token
 # gatewaytoken	: string
 #			  hawkBit gateway security token
+# usetokentodwl :bool
+# 			  send authentication token also to download the artefacts
+# 			  Hawkbit server checks for the token, but if a SWU is stored on a different server
+# 			  the token can be rejected if a different authentication mechanism is used. Default on.
 # proxy			: string
 #			  in case the server is reached via a proxy
 # ciphers		: string in the format used by CURL to set the allowed ciphers suite
@@ -152,6 +156,7 @@ suricatta :
 	sslcert		= "/etc/ssl/sslcert";
 	targettoken 	= "3bc13b476cb3962a0c63a5c92beacfh7";
 	gatewaytoken 	= "99616d4fae39167deddf21cd90047861";
+	usetokentodwl   = false;
 */
 };
 
