Select CHANNEL_CURL_SSL with SURICATTA_SSL
Suricatta's SSL does not depend on OpenSSL directly
but on curl with SSL support and on the SSL_IMPL.
Hence, depend on the SSL_IMPL and select the CHANNEL_CURL_SSL
config on activating it.

There are ifdefs where both of the two symbols are checked.
Let them only check CHANNEL_CURL_SSL.

Signed-off-by: Bastian Germann <bastiangermann@fishpost.de>
Acked-by: Stefano Babic <sbabic@denx.de>

--- a/suricatta/Config.in
+++ b/suricatta/Config.in
@@ -21,13 +21,13 @@ menu "Features"
 config SURICATTA_SSL
 	bool "SSL support"
 	default n
-	depends on HAVE_LIBSSL
-	depends on HAVE_LIBCRYPTO
+	depends on SSL_IMPL_OPENSSL || SSL_IMPL_MBEDTLS
+	select CHANNEL_CURL_SSL
 	help
 	  Enable SSL and checksum verification support in suricatta.
 
-comment "SSL support needs libcrypto, libssl"
-	depends on !HAVE_LIBSSL || !HAVE_LIBCRYPTO
+comment "SSL support needs an SSL implementation"
+	depends on !SSL_IMPL_OPENSSL && !SSL_IMPL_MBEDTLS
 
 choice
 	prompt "Update Status Storage"
