config: add support for a default configuration file
SWUpdate may be configured to load a default configuration file
when none is supplied on the command line (-f option). When the
specified file cannot be found, we simply (and silently) continue
(SWUpdate will determine if all the settings that it needs were
set from the command line).

Signed-off-by: Cedric Hombourger <Cedric_Hombourger@mentor.com>
Reviewed-by: Stefano Babic <sbabic@denx.de>

--- a/Kconfig
+++ b/Kconfig
@@ -113,6 +113,15 @@ config SYSTEMD
 	  Enable support for systemd's start-up completion
 	  notification and socket-based activation features.
 
+config DEFAULT_CONFIG_FILE
+	string "File with default settings"
+	default "/etc/swupdate.cfg"
+	help
+	  SWUpdate may get its default configuration settings
+	  from the specified file (if present). Users may
+	  override the default configuration with the -f
+	  option switch.
+
 config SCRIPTS
 	bool "enable pre and postinstall scripts"
 	default y
