Add semver library
Originally from: https://github.com/h2non/semver.c.git
Original commit: bd1db234a68f305ed10268bd023df1ad672061d7
License: MIT

Signed-off-by: Stijn Devriendt <sde@unmatched.eu>

--- a/core/Makefile
+++ b/core/Makefile
@@ -23,4 +23,5 @@ obj-y += swupdate.o \
 	 progress_thread.o \
 	 parsing_library.o \
 	 artifacts_versions.o \
-	 swupdate_dict.o
+	 swupdate_dict.o \
+	 semver.o
