travis: use alternative URL for mtd-utils
infradead is oftern down, maintainers has a mirror on github.

Signed-off-by: Stefano Babic <sbabic@denx.de>

--- a/.travis.yml
+++ b/.travis.yml
@@ -52,7 +52,7 @@ before_install:
     - sudo mkdir -p /usr/local/lib
     - sudo mkdir -p /usr/local/include
     - sudo mkdir -p /usr/local/include/mtd
-    - git clone git://git.infradead.org/mtd-utils.git
+    - git clone https://github.com/sigma-star/mtd-utils
     - cd mtd-utils
     - git checkout -b tmp v2.0.0
     - ./autogen.sh
