mtd/ubi: Use include dir that upstream suggests
mtd-utils does not export its libmtd/libubi.  However, their internal use
suggests placing the header files directly in /usr/include.
The mtd/... namespace is used by kernel header files, so it is not a good
idea to place and expect the headers there.

Debian sid just made the libraries available without the mtd/ include prefix.
Applying this patch demands a corresponding change in meta-swupdate.

Move the lib{mtd,ubi}.h files out of the mtd/ include prefix.

Signed-off-by: Bastian Germann <bage@linutronix.de>

--- a/.travis.yml
+++ b/.travis.yml
@@ -58,8 +58,8 @@ before_install:
     - ./autogen.sh
     - ./configure
     - make
-    - sudo install -m 644 include/libubi.h /usr/local/include/mtd
-    - sudo install -m 644 include/libmtd.h /usr/local/include/mtd
+    - sudo install -m 644 include/libubi.h /usr/local/include
+    - sudo install -m 644 include/libmtd.h /usr/local/include
     - sudo install -m 644 include/mtd/ubi-media.h /usr/local/include/mtd
     - sudo install -m 644 *.a /usr/local/lib
     - cd ..
