--- a/examples/configuration/swupdate.cfg
+++ b/examples/configuration/swupdate.cfg
@@ -36,7 +36,27 @@ globals :
 	syslog = true;
 	/* public-key-file = "test.pem";*/
 	mtd-blacklist = "0 1 2 3 4 5 6";
+};
 
+# logcolors : set colors for output to stdout / stderr
+#             color is set indivisually for each level
+#             each entry is in the format
+#             loglevel = color:attribute
+# where loglevel is one of:
+# 	"error","warning", "info", "debug", "trace"
+# and color is one of:
+# 	"black", "red", "green", "yellow", "blue", "magenta", "cyan", "white"
+# and attribute is one of:
+# 	"normal", "bright", "dim", "underline", "blink", "reverse", "hidden"
+#
+# Example :
+# 	error = "red";
+#
+logcolors : {
+	error = "red:blink";
+	trace = "green:normal";
+	debug = "magenta:normal";
+	warning = "yellow:underline";
 };
 
 #
