--- a/mongoose/Makefile
+++ b/mongoose/Makefile
@@ -7,7 +7,7 @@ KBUILD_CFLAGS += -DMG_ENABLE_IPV6=1
 endif
 ifneq ($(CONFIG_MONGOOSESSL),)
 KBUILD_CFLAGS += -DMG_ENABLE_SSL=1
-ifeq ($(CONFIG_SSL_IMPL_OPENSSL),y)
+ifeq ($(CONFIG_SSL_IMPL_OPENSSL)$(CONFIG_SSL_IMPL_WOLFSSL),y)
 KBUILD_CFLAGS += -DMG_SSL_IF=MG_SSL_IF_OPENSSL
 endif
 ifeq ($(CONFIG_SSL_IMPL_MBEDTLS),y)
