Kbuild: Add PKCS11 option
Add an option to enable PKCS#11-based image encryption with wolfSSL's
PKCS#11 support. p11-kit is used for PKCS#11 URI parsing.

Signed-off-by: Bastian Germann <bage@linutronix.de>
Acked-by: Torben Hohn <torben.hohn@linutronix.de>

--- a/Kconfig
+++ b/Kconfig
@@ -85,6 +85,10 @@ config HAVE_MBEDTLS
 	bool
 	option env="HAVE_MBEDTLS"
 
+config HAVE_P11KIT
+	bool
+	option env="HAVE_P11KIT"
+
 config HAVE_JSON_C
 	bool
 	option env="HAVE_JSON_C"
@@ -461,6 +465,15 @@ config ENCRYPTED_IMAGES
 	depends on SSL_IMPL_OPENSSL || SSL_IMPL_WOLFSSL || SSL_IMPL_MBEDTLS
 comment "Image encryption needs an SSL implementation"
 	depends on !SSL_IMPL_OPENSSL && !SSL_IMPL_WOLFSSL && !SSL_IMPL_MBEDTLS
+
+config PKCS11
+	bool "Enable PKCS#11 cryptographic operations"
+	default n
+	depends on HAVE_WOLFSSL && HAVE_P11KIT && ENCRYPTED_IMAGES
+	help
+	  Enable using PKCS#11 for AES decryption instead of having the plain
+	  key available in a file. This is implemented with wolfSSL independent
+	  from the SSL implementation and replaces the plain key method.
 
 source suricatta/Config.in
 
