examples: Update configuration file example
Update configuration file example with missing settings
understood by read_globals_settings().

Signed-off-by: Christian Storm <christian.storm@siemens.com>

--- a/examples/configuration/swupdate.cfg
+++ b/examples/configuration/swupdate.cfg
@@ -7,9 +7,8 @@
 
 # globals : general configuration for the installer
 #
-# verbose 
-#   Default Value: false
-#
+# verbose		: boolean
+#			  set verbose mode (Default: false)
 # loglevel 		: integer
 #			  level for logging from 1 (no log) to 6
 # syslog 		: boolean
@@ -28,6 +27,17 @@
 #			  is installed
 # postupdatecmd		: string
 #			  command to be executed after a successful update
+# ca-path		: string
+#			  path to the Certificate Authority (PEM)
+# no-downgrading	: string
+#			  not install a release older as <version>
+# no-reinstalling	: string
+#			  not install a release same as <version>
+# cert-purpose		: string
+#			  set expected certificate purpose
+#			  [emailProtection|codeSigning] (default: emailProtection)
+# forced-signer-name	: string
+#			  set expected common name of signer certificate
 globals :
 {
 
