travis: Update to Ubuntu 20.04 (Focal Fossa)
Update travis to use Ubuntu 20.04 (Focal Fossa) in order to run
CI tests against librsync2 (2.0.2), released 2018, instead
of the even more ancient librsync1 (0.9.7), released 2004.

Signed-off-by: Christian Storm <christian.storm@siemens.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 
-dist: bionic
+dist: focal
 sudo: required
 
 language: c
@@ -37,7 +37,7 @@ before_install:
     - sudo apt-get install -y libsystemd-dev
     - sudo apt-get install -y libsystemd0
     - sudo apt-get install -y check
-    - sudo apt-get install -y librsync1
+    - sudo apt-get install -y librsync2
     - sudo apt-get install -y librsync-dev
     - sudo apt-get install -y liburiparser-dev
     - sudo apt-get install -y doxygen
