--- a/.travis.yml
+++ b/.travis.yml
@@ -47,6 +47,8 @@ before_install:
     - sudo apt-get install -y libmbedtls-dev
     - sudo apt-get install -y libcmocka-dev
     - sudo apt-get install -y libfdisk-dev
+    - sudo apt-get install -y libwebsockets-dev
+    - sudo apt-get install -y libgpiod-dev
     - echo -n | openssl s_client -connect https://scan.coverity.com:443 | sed -ne '/-BEGIN CERTIFICATE-/,/-END CERTIFICATE-/p' | sudo tee -a /etc/ssl/certs/ca-
     - sudo ln -sf /usr/lib/x86_64-linux-gnu/pkgconfig/lua5.2.pc /usr/lib/x86_64-linux-gnu/pkgconfig/lua.pc
     - sudo mkdir -p /usr/local/lib
@@ -69,12 +71,6 @@ before_install:
     - make
     - sudo make install
     - cd ..
-    - git clone -b v3.0-stable https://github.com/warmcat/libwebsockets.git
-    - cd libwebsockets
-    - cmake .
-    - make
-    - sudo make install
-    - cd ..
     - git clone https://github.com/siemens/efibootguard.git
     - cd efibootguard
     - autoreconf -fi
@@ -83,14 +79,6 @@ before_install:
     - sudo install -m 644 libebgenv.a /usr/local/lib/libebgenv.a
     - sudo install -m 755 -d /usr/include/efibootguard
     - sudo install -m 644 include/ebgenv.h /usr/include/efibootguard/ebgenv.h
-    - cd ..
-    - git clone -b v1.4.1 https://git.kernel.org/pub/scm/libs/libgpiod/libgpiod.git
-    - cd libgpiod
-    - mkdir -p include/linux
-    - cp /usr/src/linux-headers-$(uname -r)/include/linux/compiler_types.h include/linux/.
-    - ./autogen.sh --prefix=/usr/local CFLAGS="-I/usr/src/linux-headers-$(uname -r)/include/uapi -Iinclude"
-    - make
-    - sudo make install
     - cd ..
     - sudo ldconfig
 
