--- a/Makefile.flags
+++ b/Makefile.flags
@@ -150,7 +150,7 @@ LDLIBS += crypto ssl
 endif
 
 ifeq ($(CONFIG_SSL_IMPL_WOLFSSL),y)
-KBUILD_CPPFLAGS += -I/usr/include/wolfssl -DOPENSSL_ALL -DWOLFSSL_APACHE_HTTPD
+KBUILD_CPPFLAGS += -DOPENSSL_ALL
 LDLIBS += wolfssl
 else ifeq ($(CONFIG_PKCS11),y)
 LDLIBS += wolfssl
