Kconfig: Move U-Boot unavailability message to choice
Move the message about the preconditions for U-Boot support to the choice
section to match the EFI Boot Guard entry behaviour.

Signed-off-by: Bastian Germann <bastiangermann@fishpost.de>

--- a/bootloader/Config.in
+++ b/bootloader/Config.in
@@ -23,6 +23,9 @@ config UBOOT
 	  Support for U-Boot
 	  https://www.denx.de/wiki/U-Boot
 
+comment "U-Boot support needs libubootenv and libz"
+	depends on !HAVE_LIBUBOOTENV || !HAVE_ZLIB
+
 config BOOTLOADER_NONE
 	bool "Environment in RAM"
 	help
@@ -45,9 +48,6 @@ config UBOOT_FWENV
 	  This is the file described in U-Boot documentation
 	  in the tools directory. It tells where the U-Boot
 	  environment is saved.
-
-comment "U-Boot support needs libubootenv, libz"
-	depends on !HAVE_LIBUBOOTENV || !HAVE_ZLIB
 
 choice
 	prompt "Update Status Storage"
