handlers: add new handler to check UUID
This handler checks that FS-UUID are unique, that is there is not yet a
filesystem on the device with the same UUID as provided in one artefact
of the SWU. This is useful in case a bootloader (such as GRUB) will
choose the device to boot from the UUID instead of the partition number.

Signed-off-by: Stefano Babic <sbabic@denx.de>

--- a/Kconfig
+++ b/Kconfig
@@ -33,6 +33,10 @@ config HAVE_LIBFDISK
 	bool
 	option env="HAVE_LIBFDISK"
 
+config HAVE_LIBBLKID
+	bool
+	option env="HAVE_LIBBLKID"
+
 config HAVE_LIBGPIOD
 	bool
 	option env="HAVE_LIBGPIOD"
