gitignore: add generated test files
Signed-off-by: Stefano Babic <sbabic@denx.de>

--- a/.gitignore
+++ b/.gitignore
@@ -43,6 +43,18 @@ tools/swupdate-sysrestart
 tools/*.map
 tools/*.out
 
+# 
+# Test unit
+#
+test/test_crypt
+test/test_hash
+test/test_json
+test/test_server_hawkbit
+test/test_verify
+test/*.out
+test/*.map
+
+
 #
 # Generated files
 #
