--- a/suricatta/Config.in
+++ b/suricatta/Config.in
@@ -51,7 +51,9 @@ comment "hawkBit support needs json-c"
 
 config SURICATTA_GENERAL
 	bool "General HTTP support"
+	depends on HAVE_JSON_C
 	select CHANNEL_CURL
+	select JSON
 	help
 	  Support for Simple HTTP coded server
 	  The server uses HTTP return codes to detect if an update
