Added software select to swupdate.cfg globals
Previously, this option could only be specified using command-line
arguments or via the IPC interface.

Signed-off-by: Michael Adler <michael.adler@siemens.com>
Signed-off-by: Christian Storm <christian.storm@siemens.com>

--- a/examples/configuration/swupdate.cfg
+++ b/examples/configuration/swupdate.cfg
@@ -38,6 +38,8 @@
 #			  [emailProtection|codeSigning] (default: emailProtection)
 # forced-signer-name	: string
 #			  set expected common name of signer certificate
+# select:		: string
+#			  select software images set and source (<software>,<mode>)
 globals :
 {
 
