build system: do not rebuild if nothing changed
Try to avoid rebuilding things needlessly by:
 - removing FORCE from direct output files, trust make dependencies
to do the right thing.

 - make cfg-sanity-check a real file that depends on .config,
so the check can be reexecuted on config change but not otherwise.

 - make tools create tools/built-in.o: that file is expected to exist
and used as timestamp comparison, but nothing creates it currently.
That one is quite ugly as trying to create the file directly would
update it needlessly so an extra "pseudo-phony" target was added.

 - remove KBUILD_STR: the # character was incorrectly truncating
commands in $(cmd_$@), making Kbuild think the command line changed
(can be tested with KBUILD_VERBOSE=2) ; in our case filling simple
quotes should always work for version number, so skip the macro
altogether.

Signed-off-by: Dominique Martinet <dominique.martinet@atmark-techno.com>

--- a/Makefile.flags
+++ b/Makefile.flags
@@ -20,7 +20,7 @@ endif
 KBUILD_CPPFLAGS += $(call cc-option,-std=gnu99,)
 
 KBUILD_CPPFLAGS += -D_GNU_SOURCE -DNDEBUG \
-		   -D"SWU_VER=KBUILD_STR($(SWU_VER))"
+		   -D"SWU_VER=\"$(SWU_VER)\""
 
 KBUILD_CFLAGS += $(call cc-option,-Wall,)
 KBUILD_CFLAGS += $(call cc-option,-Wshadow,)
