Suricatta: Avoid busy loop in handling initial state when server is unavailable
Signed-off-by: Sava Jakovljev <sava.jakovljev@teufel.de>

--- a/examples/configuration/swupdate.cfg
+++ b/examples/configuration/swupdate.cfg
@@ -166,10 +166,12 @@ identify : (
 # interface		: string
 #			  interface name (e.g. "eth0") or IP address to bind communication channel to.
 #			  This allows to select source interface/address for outgoing traffic, if needed.
+# initial-report-resend-period  : integer
+#             Specify period between re-tryint to send initial state, specified with "-c" option,
+#             when connection to Hawkbit is not available. Default value is 10 seconds.
 
 suricatta :
 {
-
 	tenant		= "default";
 	id		= "123456";
 	url 		= "http://papero.fritz.box:8080";
@@ -181,6 +183,7 @@ suricatta :
 	userid		= 1000;
 	groupid		= 1000;
 	enable		= true;
+	initial-report-resend-period = 30;
 /*
 	cafile		= "/etc/ssl/cafile";
 	sslkey		= "/etc/ssl/sslkey";
