Make folder fatfs REUSE-compliant
Signed-off-by: Mark Jonas <toertel@gmail.com>

--- a/fatfs/Makefile
+++ b/fatfs/Makefile
@@ -1,3 +1,7 @@
+# SPDX-FileCopyrightText: 2021 Weidmueller Interface GmbH & Co. KG
+#
+# SPDX-License-Identifier: GPL-2.0-only
+
 lib-$(CONFIG_FAT_FILESYSTEM) += diskio.o \
 				fat_fs.o \
 				ff.o
