--- a/fatfs/Config.in
+++ b/fatfs/Config.in
@@ -1,3 +1,7 @@
+# SPDX-FileCopyrightText: 2021 Weidmueller Interface GmbH & Co. KG
+#
+# SPDX-License-Identifier: GPL-2.0-only
+
 config FAT_FILESYSTEM
 	bool "FAT file system creation support"
 	depends on DISKFORMAT
