--- a/handlers/Config.in
+++ b/handlers/Config.in
@@ -1,3 +1,7 @@
+# SPDX-FileCopyrightText: 2013 Stefano Babic <sbabic@denx.de>
+#
+# SPDX-License-Identifier: GPL-2.0-only
+
 #
 # For a description of the syntax of this configuration file,
 # see scripts/kbuild/config-language.txt.
@@ -221,7 +225,7 @@ config ARCHIVE
 
 comment "archive support needs libarchive"
 	depends on !HAVE_LIBARCHIVE
-	
+
 config LOCALE
 	bool "Locale support for filenames"
 	depends on ARCHIVE
