--- a/Makefile.flags
+++ b/Makefile.flags
@@ -1,3 +1,7 @@
+# SPDX-FileCopyrightText: 2013 Stefano Babic <sbabic@denx.de>
+#
+# SPDX-License-Identifier: GPL-2.0-only
+
 # ==========================================================================
 # Build system
 # ==========================================================================
@@ -116,7 +120,7 @@ endif
 ifeq ($(CONFIG_LUA),y)
 ifeq ($(CONFIG_HANDLER_IN_LUA),y)
 ifeq ($(CONFIG_EMBEDDED_LUA_HANDLER),y)
-ifneq ($(CONFIG_EMBEDDED_LUA_HANDLER_SOURCE),)	
+ifneq ($(CONFIG_EMBEDDED_LUA_HANDLER_SOURCE),)
 LDFLAGS_swupdate += -Wl,--format=binary -Wl,$(CONFIG_EMBEDDED_LUA_HANDLER_SOURCE) -Wl,--format=default
 KBUILD_CPPFLAGS += -DEMBEDDED_LUA_SRC_START="_binary_$(subst ",,$(subst .,_,$(subst /,_,$(CONFIG_EMBEDDED_LUA_HANDLER_SOURCE))))_start"
 KBUILD_CPPFLAGS += -DEMBEDDED_LUA_SRC_END="_binary_$(subst ",,$(subst .,_,$(subst /,_,$(CONFIG_EMBEDDED_LUA_HANDLER_SOURCE))))_end"
