--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# SPDX-FileCopyrightText: 2013 Stefano Babic <sbabic@denx.de>
+#
+# SPDX-License-Identifier: CC0-1.0
+
 #
 # NOTE! Don't add files that are generated in specific
 # subdirectories here. Add them in the ".gitignore" file
@@ -31,7 +35,7 @@ scripts/kconfig/zconf.hash.c
 scripts/kconfig/zconf.lex.c
 scripts/kconfig/zconf.tab.c
 
-# 
+#
 swupdate
 swupdate_unstripped*
 lua_swupdate.so*
@@ -44,7 +48,7 @@ tools/swupdate-sysrestart
 tools/*.map
 tools/*.out
 
-# 
+#
 # Test unit
 #
 test/test_crypt
