--- a/.travis.yml
+++ b/.travis.yml
@@ -24,66 +24,9 @@ addons:
     branch_pattern: coverity_scan
 
 before_install:
-    - sudo apt-get -qq update
-    - sudo apt-get install -y build-essential
-    - sudo apt-get install -y automake
-    - sudo apt-get install -y libzmq3-dev
-    - sudo apt-get install -y liblua5.2-dev
-    - sudo apt-get install -y libconfig-dev
-    - sudo apt-get install -y libarchive-dev
-    - sudo apt-get install -y libjson-c-dev
-    - sudo apt-get install -y zlib1g-dev
-    - sudo apt-get install -y git
-    - sudo apt-get install -y uuid
-    - sudo apt-get install -y uuid-dev
-    - sudo apt-get install -y liblzo2-dev
-    - sudo apt-get install -y libsystemd-dev
-    - sudo apt-get install -y libsystemd0
-    - sudo apt-get install -y check
-    - sudo apt-get install -y librsync2
-    - sudo apt-get install -y librsync-dev
-    - sudo apt-get install -y liburiparser-dev
-    - sudo apt-get install -y doxygen
-    - sudo apt-get install -y graphviz
-    - sudo apt-get install -y autoconf-archive
-    - sudo apt-get install -y linux-headers-$(uname -r)
-    - sudo apt-get install -y libmbedtls-dev
-    - sudo apt-get install -y libcmocka-dev
-    - sudo apt-get install -y libfdisk-dev
-    - sudo apt-get install -y libwebsockets-dev
-    - sudo apt-get install -y libgpiod-dev
-    - echo -n | openssl s_client -connect https://scan.coverity.com:443 | sed -ne '/-BEGIN CERTIFICATE-/,/-END CERTIFICATE-/p' | sudo tee -a /etc/ssl/certs/ca-
-    - sudo ln -sf /usr/lib/x86_64-linux-gnu/pkgconfig/lua5.2.pc /usr/lib/x86_64-linux-gnu/pkgconfig/lua.pc
-    - sudo mkdir -p /usr/local/lib
-    - sudo mkdir -p /usr/local/include
-    - sudo mkdir -p /usr/local/include/mtd
-    - git clone https://github.com/sigma-star/mtd-utils
-    - cd mtd-utils
-    - git checkout -b tmp v2.0.0
-    - ./autogen.sh
-    - ./configure
-    - make
-    - sudo install -m 644 include/libubi.h /usr/local/include
-    - sudo install -m 644 include/libmtd.h /usr/local/include
-    - sudo install -m 644 include/mtd/ubi-media.h /usr/local/include/mtd
-    - sudo install -m 644 *.a /usr/local/lib
-    - cd ..
-    - git clone https://github.com/sbabic/libubootenv.git
-    - cd libubootenv
-    - cmake .
-    - make
-    - sudo make install
-    - cd ..
-    - git clone https://github.com/siemens/efibootguard.git
-    - cd efibootguard
-    - autoreconf -fi
-    - ./configure
-    - make libebgenv.a
-    - sudo install -m 644 libebgenv.a /usr/local/lib/libebgenv.a
-    - sudo install -m 755 -d /usr/include/efibootguard
-    - sudo install -m 644 include/ebgenv.h /usr/include/efibootguard/ebgenv.h
-    - cd ..
-    - sudo ldconfig
+  - ./ci/setup.sh
+  - ./ci/install-src-deps.sh
+  - echo -n | openssl s_client -connect https://scan.coverity.com:443 | sed -ne '/-BEGIN CERTIFICATE-/,/-END CERTIFICATE-/p' | sudo tee -a /etc/ssl/certs/ca-
 
 script:
-    - for i in configs/*;do echo $i;make `basename $i` && make || exit 1;make test || exit 1;done
+  - ./ci/test-configs.sh
