all_handlers_defconfig: add mke2fs library
Signed-off-by: Stefano Babic <sbabic@denx.de>

--- a/configs/all_handlers_defconfig
+++ b/configs/all_handlers_defconfig
@@ -16,6 +16,7 @@ CONFIG_CFI=y
 CONFIG_DISKPART=y
 CONFIG_DISKFORMAT=y
 CONFIG_FAT_FILESYSTEM=y
+CONFIG_EXT_FILESYSTEM=y
 CONFIG_RAW=y
 CONFIG_RDIFFHANDLER=y
 CONFIG_READBACKHANDLER=y
