--- a/examples/configuration/swupdate.cfg
+++ b/examples/configuration/swupdate.cfg
@@ -169,6 +169,10 @@ identify : (
 # initial-report-resend-period  : integer
 #             Specify period between re-tryint to send initial state, specified with "-c" option,
 #             when connection to Hawkbit is not available. Default value is 10 seconds.
+# connection-timeout : integer
+#			  Specify server connection timeout. If no connection has been established in this
+#			  period, libcurl will consider connection unsuccessful.
+#			  Default value is determined by underlying libcurl implementation (300s).
 
 suricatta :
 {
@@ -184,6 +188,7 @@ suricatta :
 	groupid		= 1000;
 	enable		= true;
 	initial-report-resend-period = 30;
+	connection-timeout = 10;
 /*
 	cafile		= "/etc/ssl/cafile";
 	sslkey		= "/etc/ssl/sslkey";
