configs: Add HASH_VERIFY to no_ssl_defconfig
The no_ssl_defconfig failed the ValidImageTest of the acceptance-tests.

make V=1 shows that hash verification is missing:

TRACE] : SWUPDATE running :  [get_common_fields] : Version 0.2.2
[TRACE] : SWUPDATE running :  [parse_hw_compatibility] : Accepted Hw
Revision : 1
[TRACE] : SWUPDATE running :  [_parse_files] : Found File: hello.txt -->
/home/hello.txt (ROOTFS)
[ERROR] : SWUPDATE failed [0] ERROR core/parser.c : check_hash_absent :
52 : hash verification not enabled but hash supplied for hello.txt
[ERROR] : SWUPDATE failed [0] ERROR core/stream_interface.c :
extract_files : 165 : Compatible SW not found
[ERROR] : SWUPDATE failed [1] Image invalid or corrupted. Not installing ...

This is fixed by adding HASH_VERIFY to the no_ssl_defconfig.

Signed-off-by: Mark Jonas <toertel@gmail.com>

--- a/configs/no_ssl_defconfig
+++ b/configs/no_ssl_defconfig
@@ -6,6 +6,7 @@ CONFIG_LUAPKG="lua5.2"
 CONFIG_EXTRA_CFLAGS="-g"
 CONFIG_BOOTLOADER_NONE=y
 CONFIG_DOWNLOAD=y
+CONFIG_HASH_VERIFY=y
 CONFIG_WEBSERVER=y
 CONFIG_JSON=y
 CONFIG_LUAEXTERNAL=y
