REUSE: add SPDX to files in examples
Signed-off-by: Stefano Babic <sbabic@denx.de>
Reviewed-by: Mark Jonas <toertel@gmail.com>

--- a/examples/configuration/swupdate.cfg
+++ b/examples/configuration/swupdate.cfg
@@ -1,5 +1,8 @@
 # SWUpdate configuration file
 #
+# SPDX-FileCopyrightText: 2014-2021 Stefano Babic <sbabic@denx.de>
+# SPDX-License-Identifier: CC0-1.0
+#
 # This is responsible to pass configuration and parameters
 # to SWUpdate. Most of configuration can be overwritten
 # with command line parameters.
