--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,4 +9,5 @@ ubuntu-focal:
     - ./ci/setup.sh
     - ./ci/install-src-deps.sh
   script:
+    - if [ $CI_COMMIT_BRANCH == "coverity_scan" ]; then ./ci/coverity.sh;fi
     - ./ci/test-configs.sh
