Kconfig: Add HAVE_LIBRSYNC
Allow passing through the environment if librsync is available
for the build target.

Defaults to yes because we do not do any library checking for now.

Signed-off-by: James Hilliard <james.hilliard1@gmail.com>
Reviewed-by: Stefano Babic <sbabic@denx.de>

--- a/Kconfig
+++ b/Kconfig
@@ -101,6 +101,10 @@ config HAVE_LIBWEBSOCKETS
 	bool
 	option env="HAVE_LIBWEBSOCKETS"
 
+config HAVE_LIBRSYNC
+	bool
+	option env="HAVE_LIBRSYNC"
+
 config HAVE_URIPARSER
 	bool
 	option env="HAVE_URIPARSER"
