Kconfig: Add HAVE_LIBEXT2FS
Allow passing through the environment if libext2fs is available
for the build target.

Defaults to yes because we do not do any library checking for now.

Signed-off-by: James Hilliard <james.hilliard1@gmail.com>
Reviewed-by: Stefano Babic <sbabic@denx.de>

--- a/Kconfig
+++ b/Kconfig
@@ -61,6 +61,10 @@ config HAVE_LIBEBGENV
 	bool
 	option env="HAVE_LIBEBGENV"
 
+config HAVE_LIBEXT2FS
+	bool
+	option env="HAVE_LIBEXT2FS"
+
 config HAVE_LIBZEROMQ
 	bool
 	option env="HAVE_LIBZEROMQ"
